feat: implement exchange matching algorithm with transactional consistency - Added order matching logic based on stock exchange rules and queue-based processing - Integrated optimistic locking (@Version) and partial rollback-safe transaction handling - Enhanced logging and prepared structure for future transaction log persistence